<package format="2">
  <name>artisaur</name>
  <version>0.1.0</version>
  <description>The NanoSaur robot package</description>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>All rights reserved</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>